# VehicleDynamicsSimulator

./: CMakeLists.txt  README.md
config/: simulation.yaml  vehicle_description.yaml
includes/: forces.hpp  tire_model.hpp  utils_geom.hpp  vehicle_model.hpp  vehicle_simulator.hpp
scripts/: plot_traj_file.py  pyproject.toml
src/: main.cpp  simulator.cpp  vehicle_simulator.cpp
vehicle_simulator/config/: simulation.yaml  tire_description.yaml
vehicle_simulator/includes/: tire_model.hpp  vehicle_simulator.hpp
